crates/swc/tests/tsc-references/internalModules/moduleDeclarations/invalidNestedModules/input.ts/es5.2.minified/output.js
var A, M2;
function _classCallCheck(instance, Constructor) {
    if (!(instance instanceof Constructor)) throw new TypeError("Cannot call a class as a function");
}
!function(A1) {
    var B, B1, C, C1, Point;
    B1 = B || (B = {
    }), C1 = C || (C = {
    }), Point = function() {
        "use strict";
        _classCallCheck(this, Point);
    }, C1.Point = Point, B1.C = C, A1.B = B;
}(A || (A = {
})), (function(A2) {
    var B, B2, C;
    B2 = B || (B = {
    }), C = function() {
        "use strict";
        _classCallCheck(this, C);
    }, B2.C = C, A2.B = B;
})(A || (A = {
})), (function(M21) {
    var X, X1, Point;
    X1 = X || (X = {
    }), Point = function() {
        "use strict";
        _classCallCheck(this, Point);
    }, X1.Point = Point, M21.X = X;
})(M2 || (M2 = {
})), (function(M22) {
    var X, Point;
    (X || (X = {
    })).Point = Point, M22.X = X;
})(M2 || (M2 = {
}));
